--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ h3 {
 /*FONTS*/
 @font-face {
   font-family: "bebasneue";
-  src: url(../fonts/bebasneue.otf); }
+  src: url(../fonts/BebasNeue.otf); }
 /*HAMBURGER MENU */
 .icon-bar {
   background-color: #ffc935; }
