--- a/scss/main.scss
+++ b/scss/main.scss
@@ -78,7 +78,7 @@ h3 {
 
 @font-face {
     font-family: "bebasneue";
-    src: url(../fonts/bebasneue.otf);
+    src: url(../fonts/BebasNeue.otf);
     
 }
 
